--- a/msc-pygeoapi.env
+++ b/msc-pygeoapi.env
@@ -8,8 +8,7 @@ export MSC_PYGEOAPI_ES_URL=http://${MSC_PYGEOAPI_ES_USERNAME}:${MSC_PYGEOAPI_ES_
 export MSC_PYGEOAPI_CACHEDIR=/tmp
 export MSC_PYGEOAPI_OGC_API_URL=https://api.wxod-dev.cmc.ec.gc.ca
 export MSC_PYGEOAPI_OGC_API_URL_BASEPATH=/
-export MSC_PYGEOAPI_METPX_EVENT_FILE_PY=/opt/msc-pygeoapi/event/file_.py
-export MSC_PYGEOAPI_METPX_EVENT_MESSAGE_PY=/opt/msc-pygeoapi/event/message.py
+export MSC_PYGEOAPI_METPX_FLOW_CALLBACK=msc_pygeoapi.event.event_plugin.Event
 export MSC_PYGEOAPI_TEMPLATES=theme/templates
 export MSC_PYGEOAPI_STATIC=theme/static
 export MSC_PYGEOAPI_LOCALE=locale
